--- a/app.json
+++ b/app.json
@@ -30,7 +30,13 @@
     },
     "plugins": [
       "expo-font",
-      "expo-router"
+      "expo-router",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID to unlock Secret Info."
+        }
+      ]
     ]
   }
 }
