--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~50.0.3",
     "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-local-authentication": "~13.8.0",
+    "expo-router": "~3.4.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.2",
-    "expo-router": "~3.4.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "react-native-gesture-handler": "~2.14.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
