--- a/app.json
+++ b/app.json
@@ -16,13 +16,21 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to use Face ID to unlock Secret Info."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ],
+      "package": "com.smarttech.devember"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -37,6 +45,14 @@
           "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID to unlock Secret Info."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "07dd0a09-36bd-4bac-b62a-0ba3dccea478"
+      }
+    }
   }
 }
